trying to fix scrolling bug on mobile v8

--- a/css/styles.css
+++ b/css/styles.css
@@ -3209,7 +3209,7 @@ img.u-pull-left {
     bottom              : 0;
     width               : 100%;
     height              : 100%;
-    background-image    : url(../images/hero-bg.jpg);
+    background-image    : url(https://images.unsplash.com/photo-1635103723394-10dab9619874?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80);
     background-repeat   : no-repeat;
     background-position : center 30%;
     background-size     : cover;
@@ -3227,7 +3227,7 @@ img.u-pull-left {
     height         : 100%;
     background     : var(--color-gray-15);
     pointer-events : none;
-    opacity        : .3;
+    opacity        : 0;
 }
 
 .s-intro__bg::after {
